--- a/src/SPerfAll/sPerf_Web/profile.html
+++ b/src/SPerfAll/sPerf_Web/profile.html
@@ -11,11 +11,15 @@
         }
         .style2
         {
-            width: 28%;
+            width: 23%;
         }
         .style3
         {
-            width: 2%;
+            width: 1%;
+        }
+        .style4
+        {
+            width: 9px;
         }
     </style>
     <script src="Scripts/jquery-1.4.2.min.js" type="text/javascript"></script>
@@ -66,53 +70,49 @@
             <input id="Button1" type="button" value="Post" /><br />
             Level : 1<br />
             Money : 10,000<br />
-            Startistic : logical&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-            8.0<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+            Startistic : 
+            <br />
+            logical&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;8.0&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
             art&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;5.0<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
             relationship&nbsp;&nbsp; 9.5</td>
       </tr>
     </table>
     <br />
-    
-   <fieldset id="el02" style="width:420px">
-                <legend style="font-size:smaller;">Top Friends(5)</legend>
-                <ul id="mycarousel" class="jcarousel-skin-tango">
-                    <li><img src="http://static.flickr.com/66/199481236_dc98b5abb3_s.jpg" width="75" height="75" alt="" /></li>
-                    <li><img src="http://static.flickr.com/75/199481072_b4a0d09597_s.jpg" width="75" height="75" alt="" /></li>
-                    <li><img src="http://static.flickr.com/57/199481087_33ae73a8de_s.jpg" width="75" height="75" alt="" /></li>
-                    <li><img src="http://static.flickr.com/77/199481108_4359e6b971_s.jpg" width="75" height="75" alt="" /></li>
-                    <li><img src="http://static.flickr.com/58/199481143_3c148d9dd3_s.jpg" width="75" height="75" alt="" /></li>
-                    <li><img src="http://static.flickr.com/72/199481203_ad4cdcf109_s.jpg" width="75" height="75" alt="" /></li>
-                    <li><img src="http://static.flickr.com/58/199481218_264ce20da0_s.jpg" width="75" height="75" alt="" /></li>
-                    <li><img src="http://static.flickr.com/69/199481255_fdfe885f87_s.jpg" width="75" height="75" alt="" /></li>
-                    <li><img src="http://static.flickr.com/60/199480111_87d4cb3e38_s.jpg" width="75" height="75" alt="" /></li>
-                    <li><img src="http://static.flickr.com/70/229228324_08223b70fa_s.jpg" width="75" height="75" alt="" /></li>
+
+    <table>
+        <tr>
+            <td valign="top" align="left" class="style4">
+            <h5 style="background-color: #E3E8E8; width: 183px; height: 22px;">Top Friends(28)</h5>
+                <ul id="mycarousel" class="jcarousel-skin-tango" 
+                    style="background-color: #F8F9F9; width: 60px; height: 400px;">
+                    <li> <img src="http://static.flickr.com/66/199481236_dc98b5abb3_s.jpg" width="45" height="45" alt="" /></li>
+                    <li><img src="http://static.flickr.com/75/199481072_b4a0d09597_s.jpg" width="45" height="45" alt="" /></li>
+                    <li><img src="http://static.flickr.com/57/199481087_33ae73a8de_s.jpg" width="45" height="45" alt="" /></li>
+                    <li><img src="http://static.flickr.com/77/199481108_4359e6b971_s.jpg" width="45" height="45" alt="" /></li>
+                    <li><img src="http://static.flickr.com/58/199481143_3c148d9dd3_s.jpg" width="45" height="45" alt="" /></li>
+                    <li><img src="http://static.flickr.com/72/199481203_ad4cdcf109_s.jpg" width="45" height="45" alt="" /></li>
+                    <li><img src="http://static.flickr.com/58/199481218_264ce20da0_s.jpg" width="45" height="45" alt="" /></li>
+                    <li><img src="http://static.flickr.com/69/199481255_fdfe885f87_s.jpg" width="45" height="45" alt="" /></li>
+                    <li><img src="http://static.flickr.com/60/199480111_87d4cb3e38_s.jpg" width="45" height="45" alt="" /></li>
+                    <li><img src="http://static.flickr.com/70/229228324_08223b70fa_s.jpg" width="45" height="45" alt="" /></li>
               </ul>
-                <br />
-    </fieldset>
-    <br />
-         <fieldset id="el03" style="width:420px">
-                <legend style="font-size:smaller;">Log events(4)</legend>
-                <table>
-                    <tr>
-                    <br />
-                        <ul id="mycarousel1" class="jcarousel jcarousel-skin-tango">
-                            <li><img src="http://static.flickr.com/66/199481236_dc98b5abb3_s.jpg" width="75" height="75" alt="" /></li>
-                            <li><img src="http://static.flickr.com/75/199481072_b4a0d09597_s.jpg" width="75" height="75" alt="" /></li>
-                            <li><img src="http://static.flickr.com/57/199481087_33ae73a8de_s.jpg" width="75" height="75" alt="" /></li>
-                            <li><img src="http://static.flickr.com/77/199481108_4359e6b971_s.jpg" width="75" height="75" alt="" /></li>
-                            <li><img src="http://static.flickr.com/58/199481143_3c148d9dd3_s.jpg" width="75" height="75" alt="" /></li>
-                            <li><img src="http://static.flickr.com/72/199481203_ad4cdcf109_s.jpg" width="75" height="75" alt="" /></li>
-                            <li><img src="http://static.flickr.com/58/199481218_264ce20da0_s.jpg" width="75" height="75" alt="" /></li>
-                            <li><img src="http://static.flickr.com/69/199481255_fdfe885f87_s.jpg" width="75" height="75" alt="" /></li>
-                            <li><img src="http://static.flickr.com/60/199480111_87d4cb3e38_s.jpg" width="75" height="75" alt="" /></li>
-                            <li><img src="http://static.flickr.com/70/229228324_08223b70fa_s.jpg" width="75" height="75" alt="" /></li>
+            </td>
+            <td valign="top" align="left">
+            <h5 style="background-color: #E3E8E8; width: 365px; height: 23px;">Log Events(13)</h5>
+                <ul id="mycarousel1" class="jcarousel jcarousel-skin-tango">
+                            <li><img src="http://static.flickr.com/66/199481236_dc98b5abb3_s.jpg" width="45" height="45" alt="" /></li>
+                            <li><img src="http://static.flickr.com/75/199481072_b4a0d09597_s.jpg" width="45" height="45" alt="" /></li>
+                            <li><img src="http://static.flickr.com/57/199481087_33ae73a8de_s.jpg" width="45" height="45" alt="" /></li>
+                            <li><img src="http://static.flickr.com/77/199481108_4359e6b971_s.jpg" width="45" height="45" alt="" /></li>
+                            <li><img src="http://static.flickr.com/58/199481143_3c148d9dd3_s.jpg" width="45" height="45" alt="" /></li>
+                            <li><img src="http://static.flickr.com/72/199481203_ad4cdcf109_s.jpg" width="45" height="45" alt="" /></li>
+                            <li><img src="http://static.flickr.com/58/199481218_264ce20da0_s.jpg" width="45" height="45" alt="" /></li>
+                            <li><img src="http://static.flickr.com/69/199481255_fdfe885f87_s.jpg" width="45" height="45" alt="" /></li>
+                            <li><img src="http://static.flickr.com/60/199480111_87d4cb3e38_s.jpg" width="45" height="45" alt="" /></li>
+                            <li><img src="http://static.flickr.com/70/229228324_08223b70fa_s.jpg" width="45" height="45" alt="" /></li>
                       </ul>
-                   </tr>
-                </table>
-                <br />
-    </fieldset>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
