--- a/src/SPerfAll/sPerf_Web/profile.html
+++ b/src/SPerfAll/sPerf_Web/profile.html
@@ -11,7 +11,7 @@
         }
         .style2
         {
-            width: 23%;
+            width: 20%;
         }
         .style3
         {
@@ -19,7 +19,11 @@
         }
         .style4
         {
-            width: 9px;
+            width: 3px;
+        }
+        #Text1
+        {
+            width: 100px;
         }
     </style>
     <script src="Scripts/jquery-1.4.2.min.js" type="text/javascript"></script>
@@ -48,7 +52,7 @@
 
 <body>
 
-    <table border="0" cellspacing="0" cellpadding="0" style="width: 78%">
+    <table border="0" cellspacing="0" cellpadding="0" style="width: 74%">
       <tr>
       <br />
         <td valign="top" class="style1"><img src="Content/images/wanida.jpg" width="100" height="100" /></td>
@@ -79,7 +83,7 @@
     </table>
     <br />
 
-    <table>
+    <table style="height: 440px">
         <tr>
             <td valign="top" align="left" class="style4">
             <h5 style="background-color: #E3E8E8; width: 183px; height: 22px;">Top Friends(28)</h5>
