commit comment dialog

--- a/src/SPerfAll/sPerf_Web/photocomment_dialog.html
+++ b/src/SPerfAll/sPerf_Web/photocomment_dialog.html
@@ -13,5 +13,5 @@
           title: "Dialog Title";
       });
   </script>
-<div id="display"></div>
+<div id="display" style="visibility:hidden">Tsest</div>
 <table><tr><td><button id="dialog" type="button">Comment</button></td></tr></table>
